--- a/Currency Converter Website/index.html
+++ b/Currency Converter Website/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="https://w7.pngwing.com/pngs/920/165/png-transparent-indian-rupee-sign-currency-symbol-india-angle-company-text.png">
+    <title>Currency Converter Website</title>
     <link rel="stylesheet" href="Assets/style.css">
 </head>
 <body>
