--- a/Food Ordering Website/index.html
+++ b/Food Ordering Website/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
     <div class="container">
-
+        <div class="card">
+            <img class="card-img" src="Assets/Images/White-Sauce-Pasta.jpg" alt="White-Sauce-Pasta">
+            <p class="card-heading"><b>White Sause Pasta</b></p>
+            <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro alias accusantium veritatis, nam nihil molestias!</p>
+            <a href="index.html">
+            <button class="card-button">Order Now</button>
+            </a>
+        </div>
         <div class="card">
             <img class="card-img" src="Assets/Images/Masala-Dosa.jpg" alt="White-Sauce-Pasta">
             <p class="card-heading"><b>Masala Dosa</b></p>
